cropped header background image to fix sliding background problem

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,7 @@
   position: relative;
   height: 100vh;
   width: 100%;
-  background-image: url('../../images/chicago.jpg');
+  background-image: url('../../images/chicagoCrop.jpg');
   background-attachment: local;
   background-size: cover;
   background-repeat: no-repeat; 
